--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: white;
             margin: 0px;
             padding: 0px;
-            background: url('gym.jpg');
+            background: url('gym.jpg') no-repeat center center/cover;
             font-family: 'Baloo Bhai 2', cursive;
         }
         .left{
